[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dungeon/Encounter/Spawner/Scripts/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node"]
script = ExtResource( 1 )

[node name="wave_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
one_shot = true

[node name="initial_delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="initial_delay" to="." method="_on_initial_delay_timeout"]
